# resistor_combination_calc

./: .clang-format  CMakeLists.txt  README.md  form_rescalc.cpp  form_rescalc.h  form_rescalc.ui  main.cpp
